<?xml version="1.0"?>
<package format="2">
  <name>ypspur</name>
  <version>1.15.3</version>
  <description>YP-Spur is a mobile robot motion control software with coordinate frame based commands. </description>
  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>libreadline-dev</build_depend>

  <exec_depend>catkin</exec_depend>
  <exec_depend>libreadline</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
